Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test15.java
/* Test15
 * Objetivo: Detectar que falta la sentencia o bloque correspondiente al then.
 */
class clase
{
	dynamic void metodo()
	{
		if (2*5 != 3/4)
		else
			return;
	}
	
}
